Task add to database functionality

--- a/views/style.css
+++ b/views/style.css
@@ -2,16 +2,33 @@
   margin: 0;
   padding: 0;
 }
+.row {
+  padding-top: 40px;
+}
 .card {
-  margin: 70px 0;
+  margin: 10px 0;
   padding: 35px 45px;
 }
 .form-group {
   margin: 20px 0;
 }
-.task-group .task-group-item{
-    margin: 20px 0;
-    border: 1px solid #e5e5e5;
-    padding: 10px 15px;
-    border-radius: 3px;
+.task-group .task-group-item {
+  margin: 20px 0;
+  border: 1px solid #e5e5e5;
+  padding: 10px 15px;
+  border-radius: 3px;
+}
+.task-group-item small {
+  font-size: 10px;
+  color: #4c4d4f;
+}
+.alert{
+    width: 98%;
+    height: max-content;
+    padding: 10px;
+    margin:0 auto;
+}
+.alert .close{
+    float: right;
+    padding: 0;
 }
